--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -98,6 +98,8 @@
           	<p><img src="images/spec.jpg" alt="bunnies" width="900px" align="middle"/></p>
         	</div>
         </section>
+
+    <hr class="divider">
 		
 		<!-- Overview
 		============================ -->
@@ -133,10 +135,12 @@
 			about the intersection if there was one. Both functions were done with a respective algorithm/formula, with the ray-sphere intersection implemented with a derivation of the quadratic formula and the ray-triangle intersection implemented with the Moller Trumbore Algorithm (as shown below): 
 		  </p>
 
+		  <p>
 		  <div id="centerImage">
-			<img src="images/Moller_Trumbore.jpeg" class="centerImage" width="480px" style="margin: 5px 5px 5px 5px;">
+			<img src="images/Moller_Trumbore.jpeg" width="480px" style="margin: 5px 5px 5px 5px;">
 			<figcaption>The Moller Trumbore Algorithm</figcaption>	
 		  </div>
+		  </p>
 
 		  <p>
 			More specifically, for our ray-triangle intersection, by using the Moller Trumbore algorithm, we were able to derive the barycentric coordinates of our point of intersection with formula depicted in the figure above. We were able to derive those barycentric coordinates by applying the appropriate formula on the points of the triangle, origin of the ray and the direction of the ray.
