Small change in Part 1 write up

--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -188,7 +188,7 @@
 				  <img src="images/Task1/glass_spheres_100.png" width="480px" style="margin: 5px 5px 5px 5px;">
 				  <figcaption>../dae/sky/CBspheres.dae at max ray depth 100</figcaption>
 				</div>
-			  <p>With 100, there isn’t a large difference between the image that was rendered at max ray depth of 5 (in a sense, our rays have “converged” so there aren't any new changes for the image rendered). </p>
+			  <p>With 100, there isn’t a large difference between the image that was rendered at max ray depth of 5 (in a sense, our rays have “converged” so there aren't any new changes for the image rendered). Because we're rendering with max ray depth of 100, there are more bounces of light, so there are a little more specks of light around the ceiling light in the right sphere.</p>
         </section>
 
        <hr class="divider">
